--- a/views/admin/index.handlebars
+++ b/views/admin/index.handlebars
@@ -1,2 +1,9 @@
-<h1>Blank</h1>
-<p>This is an example of a blank page that you can use as a starting point for creating new ones.</p>
+<div class="row">
+    <form action="/admin/generate-fake-posts" method="post">
+        <h1>Create Posts</h1>
+        <div class="form-group">
+            <input type="number" name="amount" class="form-control">
+        </div>
+        <button>Create</button>
+    </form>
+</div>
