--- a/views/admin/posts/create.handlebars
+++ b/views/admin/posts/create.handlebars
@@ -1,8 +1,17 @@
 <h1>Create posts</h1>
-<form action="/admin/posts/create" method="post">
+{{#each errors}}
+    <div class="alert alert-danger">
+        {{message}}
+    </div>
+{{/each}}
+<form action="/admin/posts/create" method="post" enctype="multipart/form-data">
     <div class="form-group">
         <label for="title">Title</label>
-        <input type="text" name="title" class="form-control" id="title" placeholder="Enter title">
+        <input type="text" name="title" class="form-control" id="title" placeholder="Enter title" required>
+    </div>
+    <div class="form-group">
+        <label for="file">File Upload</label>
+        <input type="file" name="file" class="form-control" id="file">
     </div>
     <div class="form-group">
         <label for="status">Status</label>
@@ -19,8 +28,8 @@
         </label>
     </div>
     <div class="form-group">
-        <label for="body">Body</label>
-        <textarea name="body" rows="10" class="form-control" id="body" placeholder="Enter body"></textarea>
+        <label for="body">Description</label>
+        <textarea name="body" rows="10" class="form-control" id="body" placeholder="Enter body" required></textarea>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
