--- a/views/admin/posts/index.handlebars
+++ b/views/admin/posts/index.handlebars
@@ -3,6 +3,7 @@
     <thead>
     <tr>
         <th>Id</th>
+        <th>File</th>
         <th>Title</th>
         <th>Status</th>
         <th>Allow Comments</th>
@@ -13,6 +14,7 @@
         {{#each posts}}
             <tr>
                 <td>{{id}}</td>
+                <td><img class="img-responsive" height="50px" src="/uploads/{{file}}" alt=""></td>
                 <td>{{title}}</td>
                 <td>{{status}}</td>
                 <td>{{allowComments}}</td>
