create single post route

--- a/views/admin/index.handlebars
+++ b/views/admin/index.handlebars
@@ -1,9 +1,7 @@
-<div class="row">
-    <form action="/admin/generate-fake-posts" method="post">
-        <h1>Create Posts</h1>
-        <div class="form-group">
-            <input type="number" name="amount" class="form-control">
-        </div>
-        <button>Create</button>
-    </form>
-</div>
+<form action="/admin/generate-fake-posts" method="post">
+    <h1>Generate Posts</h1>
+    <div class="form-group">
+        <input type="number" name="amount" class="form-control">
+    </div>
+    <button class="btn btn-dark">Generate</button>
+</form>
