--- a/views/admin/posts/create.handlebars
+++ b/views/admin/posts/create.handlebars
@@ -31,5 +31,5 @@
         <label for="body">Description</label>
         <textarea name="body" rows="10" class="form-control" id="body" placeholder="Enter body" required></textarea>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary">Create Post</button>
 </form>
