--- a/views/admin/posts/edit.handlebars
+++ b/views/admin/posts/edit.handlebars
@@ -1,8 +1,12 @@
 <h1>Edit posts</h1>
-<form action="/admin/posts/edit/{{post.id}}?_method=PUT" method="post">
+<form action="/admin/posts/edit/{{post.id}}?_method=PUT" method="post" enctype="multipart/form-data">
     <div class="form-group">
         <label for="title">Title</label>
-        <input type="text" name="title" class="form-control" id="title" placeholder="Enter title" value="{{post.title}}">
+        <input type="text" name="title" class="form-control" id="title" placeholder="Enter title" value="{{post.title}}" required>
+    </div>
+    <div class="form-group">
+        <label for="file">File Upload</label>
+        <input type="file" name="file" class="form-control" id="file">
     </div>
     <div class="form-group">
         <label for="status">Status</label>
@@ -22,7 +26,7 @@
     </div>
     <div class="form-group">
         <label for="body">Body</label>
-        <textarea name="body" rows="10" class="form-control" id="body" placeholder="Enter body">{{post.body}}</textarea>
+        <textarea name="body" rows="10" class="form-control" id="body" placeholder="Enter body" required>{{post.body}}</textarea>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary">Update Post</button>
 </form>
