--- a/views/admin/posts/edit.handlebars
+++ b/views/admin/posts/edit.handlebars
@@ -9,6 +9,14 @@
         <input type="file" name="file" class="form-control" id="file">
     </div>
     <div class="form-group">
+        <label for="category">Category</label>
+        <select name="category" id="category" class="form-control">
+            {{#each categories}}
+                <option value="{{id}}">{{name}}</option>
+            {{/each}}
+        </select>
+    </div>
+    <div class="form-group">
         <label for="status">Status</label>
         <select name="status" id="status" class="form-control">
             {{#select post.status}}
